# genai-research-summariser

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  init-localstack.sh
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  process_reports.py  research_service.py
backend/app/routers/: documents.py
backend/app/services/: __init__.py  llm_service.py  ocr_service.py  vector_service.py
backend/tests/: test_research_service.py
docs/: aws-deployment.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.test.js
terraform/: main.tf  terraform.tfvars.example  variables.tf
