[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for genai-research-summariser"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.104.0"
uvicorn = "^0.18.0"
mangum = "^0.13.0"
openai = "^1.0.0"
langchain = "^0.1.0"
boto3 = "^1.34.0"
aioboto3 = "^12.1.0"
python-multipart = "^0.0.6"
pypdf2 = "^3.0.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
